--- a/_posts/2020-10-07-blogpost.md
+++ b/_posts/2020-10-07-blogpost.md
@@ -1,5 +1,5 @@
 ---
-published: false
+published: true
 ---
 # Welcome to my blog page
 
@@ -7,7 +7,3 @@ published: false
 ### I am currently a senior attending Clear Springs High School
 ### My favorites
 I like to play basketball during my free time and I look up to various nba players
-
-
-
-
