--- a/_posts/2020-10-07-blogpost.md
+++ b/_posts/2020-10-07-blogpost.md
@@ -2,8 +2,47 @@
 published: true
 ---
 # Welcome to my blog page
+ [http://3.bp.blogspot.com/-vV2a2QFqBp0/UwHc_jScciI/AAAAAAAAAek/s-GLis21bmo/s1600/welcome_to_my_blog_by_rafiqus-d5gbnpi.png](http://3.bp.blogspot.com/-vV2a2QFqBp0/UwHc_jScciI/AAAAAAAAAek/s-GLis21bmo/s1600/welcome_to_my_blog_by_rafiqus-d5gbnpi.png)
 
 ## My name is Brandon Nguyen 
 ### I am currently a senior attending Clear Springs High School
-### My favorites
-I like to play basketball during my free time and I look up to various nba players
+## My favorites:
+I like to play basketball during my free time and I look up to various nba players while i am playing
+
+During my free time I am usually hanging out with my friends or in my room playing video games with my friends and cousins.
+
+American and Mexican food is my favorite types of dishes
+
+## What I typically do on a regular school day
+Firstly, this year has been extremely different with going online and a global pandemic going on.
+
+Typically, I wake up at around 7:00 and get something to eat before I join my first virtual class.
+
+I go to classes until 7:20-11 and then I'm on lunch break. 
+
+I am pretty lucky as I do not have a 5th period meaning I do not have a class from 11-1.
+
+After, I go to my last class of the day (6th) (Computer Science) 
+
+At the end of the day, I finish up my homework and repeat.
+
+## What I do on the weekends
+Typically I am either hanging out with my family and friends or doing school work.
+
+This is my time to rest up and catch up on sleep for the week:)
+
+## The future
+I hope to attend the University of Texas at Austin and I have been working on my applications!
+
+### Regarding blogs
+I plan to keep this page updated with my life and future. Stay tuned!
+
+
+
+
+
+
+
+
+
+
